# meshcore-metro

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pi_install.sh  pyproject.toml
api/: serializers.py  urls.py  views.py
docs/: ARCHITECTURE.md
docs/specs/01-spec-meshcore-metro-current-state/: 01-questions-1-meshcore-metro-current-state.md  01-spec-meshcore-metro-current-state.md
docs/specs/02-spec-monitoring-dashboard/: 02-questions-1-monitoring-dashboard.md  02-spec-monitoring-dashboard.md  02-tasks-monitoring-dashboard.md
max/: admin.py  asgi.py  consumers.py  models.py  radio_interface.py  settings.py  urls.py  views.py  wsgi.py
max/management/commands/: find_usb_radio.py  load_radio_data.py
max/migrations/: 0001_initial.py  0002_mappingsession.py  0003_remove_node_latitude_remove_node_longitude_and_more.py
max/static/max/css/: max.css  mesh-home.css  node-detail.css  signal-mapper.css
max/static/max/js/: ble-connection.js  heatmap-renderer.js  measurement-collector.js  mesh-home.js  pi-connection.js  signal-mapper.js  ws-connection.js
max/templates/max/: base.html  mesh_home.html  node_detail.html  signal_mapper.html
metro/: admin.py  asgi.py  consumers.py  models.py  radio.py  settings.py  urls.py  views.py
metro/management/commands/: load_radio_data.py
metro/migrations/: 0001_initial.py  0002_node_path.py
metro/static/metro/css/: field-testing.css  node-detail.css  signal-mapper.css
metro/static/metro/js/: field-testing.js  measurement-collector.js  signal-mapper.js  ws-connection.js
metro/subsystems/: lora_radio.py
metro/templates/metro/: base.html  config_mesh.html  field_testing.html  node_detail.html  signal_mapper.html
